syntax = "proto3";

option java_package = "org.spr.protos";
option java_multiple_files = true;
option java_outer_classname = "Messages";

message SimpleMessage {
  string id = 1;
  string body = 2;
}

message SimpleSizedMessage {
  repeated bytes data = 1;
}

message SizedMessageRequest {
  uint32 size_mb = 1;
}

service SizedMessageService {
  rpc ping (SizedMessageRequest) returns (SimpleSizedMessage) {};

  rpc echoStream(SizedMessageRequest) returns (stream SimpleSizedMessage) {};
}

service MessageService {
  rpc ping (SimpleMessage) returns (SimpleMessage) {};

  rpc echoStream (SimpleMessage) returns (stream SimpleMessage) {};
}

service MessageDbService {
  rpc create (SimpleMessage) returns (SimpleMessage) {};

  rpc getAll (SimpleMessage) returns (stream SimpleMessage) {};
}

